# Auction

./: auction.txt  db.sqlite3  pyproject.toml
accounts/: forms.py  views.py
django_project/: settings.py
model/: forms.py  models.py  views.py
templates/: home.html
templates/auction/: item.html
used data/: readme.md
