[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
fantasy_football_auction = "^0.9.97"
mindpowered-englishauction = "^0.0.64"
[tool.poetry.dev-dependencies]
